--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run json db server
       run: |
-        json-server --watch db.json
+        json-server --watch db/db.json
       
 
     - name: Install dependencies
