--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Run JSON Server and Pytest
 
 on:
   push:
@@ -13,28 +13,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.12      
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y npm
+          npm install -g json-server
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Start JSON Server in the background
+        run: |
+          nohup json-server --watch db/db.json > json-server.log 2>&1 &
+        env:
+          PATH: ${{ runner.tool_cache }}/node/$(node -v)/bin:$PATH
 
-    - name: install json db server
-      run: |
-        npm install -g json-server      
+      - name: Wait for JSON Server to be ready
+        run: |
+          for i in {1..30}; do
+            if nc -z localhost 3000; then
+              echo "JSON Server is ready."
+              break
+            fi
+            echo "Waiting for JSON Server..."
+            sleep 1
+          done
+          if ! nc -z localhost 3000; then
+            echo "JSON Server failed to start."
+            exit 1
+          fi
 
-    - name: Run json db server
-      run: |
-        json-server --watch db/db.json        
+      - name: Run Pytest
+        run: pytest
+        env:
+          PATH: ${{ runner.tool_cache }}/node/$(node -v)/bin:$PATH
 
-    - name: Run tests with coverage
-      run: |
-        pytest --cov=src --cov-report=xml --cov-report=term
-
+      - name: Cleanup Background Jobs
+        run: |
+          pkill -f "json-server --watch db/db.json" || true
