--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y npm
           npm install -g json-server
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Start JSON Server in the background
         run: |
-          nohup json-server --watch db/db.json > json-server.log 2>&1 &
-        env:
-          PATH: ${{ runner.tool_cache }}/node/$(node -v)/bin:$PATH
+          json-server --watch db/db.json
 
       - name: Wait for JSON Server to be ready
         run: |
