--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Start JSON Server in the background
         run: |
-          json-server --watch db/db.json
+          json-server --watch db/db.json > json-server.log 2>&1 &
+          echo $! > json-server.pid
 
       - name: Wait for JSON Server to be ready
         run: |
